[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "redteam-id-patch"
version = "1.0.0"
description = "RedTeam ID Patch — replaces forensic artifacts in Impacket & NetExec with your team identifier"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
keywords = ["redteam", "impacket", "netexec", "patcher", "identifier"]

[tool.hatch.build.targets.wheel]
packages = ["redteam_id_patch.py"]

[tool.hatch.build.targets.wheel.force-include]
"redteam_id_patch.pth" = "redteam_id_patch.pth"
